# Alignatt4LLM

./: .dockerignore  .gitignore  AGENTS.md  BILAN_mid_run.md  CITATION.cff  CLAUDE.md  DECISIONS.md  Dockerfile  ITERATION_RESULT.md  LICENSE  PLAN.md  PLAN_AUDIT_NOTE.md  PLAN_RESULT_IMPLEMENTATION.md  README.md  alignment_backend.py  analysis_inversion.md  analyze_cascade_timings.py  baseline.py  benchmark_simulstream_speed.py  build_alignatt_head_set.py  build_split_manifest.py  build_split_manifest_full.py  cascade_artifacts.py  cascade_audio.py  cascade_emission.py  cascade_mt_backend.py  cascade_runtime.py  cascade_simulstream_processor.py  cascade_source_frontier.py  cascade_source_text.py  cascade_submission.py  cascade_text_surface.py  cascade_translation_variants.py  check_jupyter_kernels.sh  comparaison_asr.md  compare_context_ablations.py  dev-set  evaluate_cascade_outputs.py  gemma_alignment_probe.py  gemma_asr_low_latency.py  (+78 more)
.claude/: ralph-loop.local.md
assets/: __init__.py
aziz_paper/: how-real-biblio.bib  iwslt25-bibs.bib  iwslt26-bibs.bib  main-2025.tex  main.tex  msca-refs.bib  sample.bib
cascade/: __init__.py  artifacts.py  presets.py  runtime.py  server.py  simulstream_processor.py  source_frontier.py  source_surface.py  source_text.py  submission.py  text_surface.py  translation_variants.py  vllm_compat.py
context_injection/: README.md  __init__.py  context_selector.py
dedicated_audio_gemma_aligner/: PLAN.md  README.md  __init__.py  build_split_manifest.py  build_split_manifest_full.py  gemma_audio_features.py  gemma_feature_aligner.py  paths.py  run_gemma_feature_aligner_eval.py  run_gemma_feature_aligner_train.py  run_generate_split_teachers.py  training_gemma_aligner.md
docs/: CASCADE_POLICY_AUDIT.md  CONTEXT_INJECTION.md  MT_VLLM_BACKEND.md  RESULTS.md  RUNTIME_ARCHITECTURE.md  SIMULSTREAM_TWO_FRONTENDS.md  TROUBLESHOOTING.md  adding_a_model.md  architecture.md  data.md  development.md  generalizing.md  public-release.md  reproducibility.md  results.md  status.md  submission.md  system.md
paper/: Makefile  build_paper_artifacts.py  candidate_bank_en_fr.json  iwslt26-bibs.bib  main.aux  main.bbl  main.bbox  main.out  main.tex  main_previous.tex  references.bib  scratch.aux  scratch.out  scratch.tex  text_previous.tex
ralph/: README_RALPH.md
scripts/: README.md  analyze_cascade_timings.py  asr_trace_to_hypothesis_jsonl.py  autopilot_additive.sh  benchmark_simulstream_speed.py  build_alignatt_head_set.py  compare_asr_full_audio.py  compare_asr_per_audio_batch.py  compare_asr_word_end_bias.py  continuous_confidence_replay.py  eval_asr_holdback_proxy.py  eval_asr_per_audio_longyaal.py  eval_gemma_e4b_asr_longyaal.py  eval_voxtral_asr_longyaal.py  gemma_e4b_asr_local_agreement_capture.py  legacy_baseline.py  loop_replay_gate_predictor.py  multi_feature_rewind_classifier.py  per_gate_separability.py  per_gate_separability_v2.py  plot_asr_comparison.py  plot_asr_reference_tail_risk_curve.py  plot_enzh_baseline_vs_current.py  plot_enzh_quality_latency_tradeoff.py  qwen3asr_gemma_cascade_notebook.py  qwen_local_agreement_capture.py  recover_prior_artifacts.py  reemit_cascade_outputs.py  replay_enzh_agreement_policies.py  replay_enzh_source_mass_thresholds.py  replay_enzh_source_regression_trim.py  report_enzh_agreement_policy_tradeoff.py  report_enzh_candidate_promotions.py  report_enzh_combined_guard_diagnostics.py  report_enzh_emission_lag_diagnostics.py  report_enzh_resegmentation_diagnostics.py  report_enzh_source_context_diagnostics.py  report_enzh_source_frontier_diagnostics.py  report_enzh_source_mass_thresholds.py  report_enzh_token_argmax_frontier_diagnostics.py  (+31 more)
submission/: CONTENTS.tsv  DEV_LOG_INDEX.json  DOCKER_TEST.md  README.md  SUBMISSION_BUNDLE.md  build_push_dockerhub_h100.sh  docker-entrypoint.sh  download_model_snapshots.py  export_standalone_bundle.py  http_proxy_processor.yaml  render_preset_yaml.py  sync_artifacts.py
submission_raw/: ARTIFACT_INDEX.json  README.md  SUBMISSION_BUNDLE.md  docker-entrypoint.sh  render_preset_yaml.py  sync_artifacts.py
tests/: test_asr_punctuation_commit_policy.py  test_attention_trace.py  test_capture_safe_default_invariants.py  test_milmmt_mt.py  test_mt_cutoff_policy_sweep.py  test_mt_vllm_speculative_and_cutoff.py  test_permissive_default_invariants.py  test_plot_enzh_quality_latency_tradeoff.py  test_qwen_mt.py  test_recover_prior_artifacts.py  test_replay_enzh_agreement_policies.py  test_replay_enzh_source_mass_thresholds.py  test_replay_enzh_source_regression_trim.py  test_report_enzh_candidate_promotions.py  test_report_enzh_combined_guard_diagnostics.py  test_report_enzh_emission_lag_diagnostics.py  test_report_enzh_resegmentation_diagnostics.py  test_report_enzh_source_context_diagnostics.py  test_report_enzh_source_frontier_diagnostics.py  test_report_enzh_source_mass_thresholds.py  test_report_enzh_source_regression_diagnostics.py  test_report_enzh_token_argmax_frontier_diagnostics.py  test_report_learned_acceptance_calibration.py  test_report_unit_concentration_separability.py  test_run_simulstream_batch.py  test_run_simulstream_compare.py  test_verify_enzh_baseline_dominance.py  test_vllm_qk_spec.py
tmp/: alignatt_smoke18_gemma_inspect.json  alignatt_smoke18_gemma_vllm_compile_no_cg_buffer_module.json  alignatt_smoke18_gemma_vllm_compile_repeat_same_engine.json  alignatt_smoke18_gemma_vllm_compile_repeat_same_engine_prefix_cache.json  alignatt_smoke18_gemma_vllm_custom_worker_full_cg.json  alignatt_smoke18_gemma_vllm_custom_worker_full_cg_buffer_module.json  alignatt_smoke18_gemma_vllm_eager_baseline.json  alignatt_smoke18_gemma_vllm_full_cg_repeat_same_engine.json  (+59 more)
(+778 files in other folders)
