[project]
name = "cascade_simultaneous"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[dependency-groups]
inference = [
  "torch==2.10.0",
  "mistral-common==1.11.0",
  "accelerate==1.13.0",
  "simulstream",
  "simuleval",
  "pymupdf-layout",
  "pymupdf4llm",
  "jupyter",
  "nvitop",
  "pycryptodome",
  "mweralign",
  "cloudpickle"
  "qwen_asr[vllm]"
]
evaluation = [
  "torch==2.10.0",
  "numpy==1.26.4",
  "pandas==2.3.3",
  "pyyaml",
  "sentencepiece==0.2.1",
  "sacrebleu==2.6.0",
  "mosestokenizer==1.2.1",
  "transformers==4.57.6",
  "unbabel-comet==2.2.6",
  "simulstream[eval]",
  "OmniSTEval",
]

[tool.uv]
default-groups = []
conflicts = [
  [
    { group = "inference" },
    { group = "evaluation" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# uv venv .venv-inference --python 3.13
# UV_PROJECT_ENVIRONMENT=.venv-inference uv sync --group inference
# uv venv .venv-inference --python 3.13
# source .venv-inference/bin/activate
# UV_PROJECT_ENVIRONMENT=.venv-inference uv pip install -U vllm --pre \
#   --extra-index-url https://wheels.vllm.ai/nightly/cu129 \
#   --extra-index-url https://download.pytorch.org/whl/cu129 \
#   --index-strategy unsafe-best-match
# UV_PROJECT_ENVIRONMENT=.venv-inference uv pip install transformers==5.5.0

# uv venv .venv-evaluation --python 3.13
# UV_PROJECT_ENVIRONMENT=.venv-evaluation uv sync --group evaluation
