[project]
name = "alignatt4llm"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alignatt4llm*", "simulstream*"]

[project.scripts]
alignatt-batch = "alignatt4llm.cli.entrypoints:batch_main"
alignatt-compare = "alignatt4llm.cli.entrypoints:compare_main"
alignatt-eval = "alignatt4llm.cli.entrypoints:evaluate_main"
alignatt-preset = "alignatt4llm.cli.entrypoints:preset_main"
alignatt-gemma-asr = "alignatt4llm.cli.entrypoints:gemma_asr_main"
alignatt-mt-parity = "alignatt4llm.cli.entrypoints:mt_parity_main"

[dependency-groups]
dev = [
  "pytest",
]
inference = [
  "torch==2.10.0",
  "mistral-common==1.11.0",
  "accelerate==1.12.0",
  "simulstream",
  "simuleval",
  "huggingface-hub",
  "pymupdf-layout",
  "pymupdf4llm",
  "jupyter",
  "nvitop",
  "pycryptodome",
  "mweralign",
  "cloudpickle",
  "qwen_asr"
]
evaluation = [
  "torch==2.10.0",
  "numpy==1.26.4",
  "pandas==2.3.3",
  "pyyaml",
  "setuptools<81",
  "sentencepiece==0.2.1",
  "sacrebleu==2.6.0",
  "mosestokenizer==1.2.1",
  "transformers==4.57.6",
  "unbabel-comet==2.2.6",
  "simulstream[eval]",
  "OmniSTEval",
]

[tool.uv]
default-groups = []
conflicts = [
  [
    { group = "inference" },
    { group = "evaluation" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ./tools/bootstrap/setup_inference_qwen_asr_vllm.sh
# ./tools/bootstrap/setup_inference_qwen_asr_vllm.sh /custom/path/to/.venv-inference

# uv venv .venv-evaluation --python 3.13
# UV_PROJECT_ENVIRONMENT=.venv-evaluation uv sync --group evaluation

[tool.pytest.ini_options]
# Only the pytest files under tests/ are the maintained test suite.
# tools/ holds dated research scripts that may fail to import cleanly
# (e.g. they require env vars like OPENAI_API_KEY) and must not be swept
# into pytest discovery.
testpaths = ["tests"]
pythonpath = ["src", "."]
norecursedirs = [
    ".git", ".venv-inference", ".venv-evaluation", "__pycache__",
    "tools", "docs", "outputs", "tmp", "dist", "data",
]
python_files = ["test_*.py"]
